# watch-librus

./: .gitignore  README.md  config.ini.template  requirements.txt  setup.cfg
lib/: librus-0.0.14-py3-none-any.whl
watchlibrus/: SmtpNotificationMailer.py  lessonplan.py  librus.py  main.py  renderer.py
watchlibrus/templates/: lesson-plan-change-notification.html
watchlibrus/tests/: test_compare_lesson_plan.py
watchlibrus/tests/resources/lesson_plan_comparisons/: test-01.json  test-02.json  test-03.json  test-04.json  test-05.json
