[metadata]
name = watch-librus
version = 0.1.0

[options]
packages = watchlibrus
install_requires =
    pysqlite3
    click
    librus==0.0.14
    jinja2
include_package_data = True

[options.entry_points]
console_scripts =
    watchlibrus = watchlibrus.main:watchlibrus_main

[options.package_data]
swatchlibrus = templates/*.html
