[metadata]
name = watch-librus
version = 0.1.3

[options]
packages = watchlibrus
install_requires =
    pysqlite3
    click
    librus @ git+https://github.com/mwilkowski80/librus-api-python
    jinja2

[options.entry_points]
console_scripts =
    watchlibrus = watchlibrus.main:watchlibrus_main

[options.package_data]
watchlibrus = templates/*.html
